package com.example.hilibrary.log.formatter;

public interface HiLogFormatter<T> {
    String format(T data);
}
