@startuml

title __ASPROJ.HILIBRARY's Class Diagram__\n

  namespace com.example.hi_library {
    class com.example.hi_library.BuildConfig {
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      class com.example.hi_library.log.HiLog {
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      abstract class com.example.hi_library.log.HiLogConfig {
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      class com.example.hi_library.log.HiLogManager {
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      class com.example.hi_library.log.HiLogMo {
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      class com.example.hi_library.log.HiLogType {
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace formatter {
        interface com.example.hi_library.log.formatter.HiLogFormatter {
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace formatter {
        class com.example.hi_library.log.formatter.HiStackTraceFormatter {
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace formatter {
        class com.example.hi_library.log.formatter.HiThreadFormatter {
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace printer {
        class com.example.hi_library.log.printer.HiConsolePrinter {
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace printer {
        interface com.example.hi_library.log.printer.HiLogPrinter {
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace printer {
        class com.example.hi_library.log.printer.HiViewPrinter {
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace printer {
        class com.example.hi_library.log.printer.HiViewPrinterProvider {
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace utils {
        class com.example.hi_library.log.utils.HiDisplayUtil {
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace utils {
        class com.example.hi_library.log.utils.HiStackTraceUtil {
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace utils {
        class com.example.hi_library.log.utils.HiViewUtil {
        }
      }
    }
  }
  

  com.example.hi_library.log.HiLogManager o-- com.example.hi_library.log.HiLogConfig : config
  com.example.hi_library.log.formatter.HiStackTraceFormatter .up.|> com.example.hi_library.log.formatter.HiLogFormatter
  com.example.hi_library.log.formatter.HiThreadFormatter .up.|> com.example.hi_library.log.formatter.HiLogFormatter
  com.example.hi_library.log.printer.HiConsolePrinter .up.|> com.example.hi_library.log.printer.HiLogPrinter
  com.example.hi_library.log.printer.HiViewPrinter .up.|> com.example.hi_library.log.printer.HiLogPrinter
  com.example.hi_library.log.printer.HiViewPrinter o-- com.example.hi_library.log.printer.HiViewPrinter.LogAdapter : adapter
  com.example.hi_library.log.printer.HiViewPrinter o-- com.example.hi_library.log.printer.HiViewPrinterProvider : viewProvider


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
